--- a/2021I_GBI6_ExamenFinal.Rmd
+++ b/2021I_GBI6_ExamenFinal.Rmd
@@ -181,7 +181,8 @@ cancertype_boxplots
 ```{r boxplot3}
 # Escriba el código para guardar la tercera figura de la lista. 
 
-
+cancertype_boxplots[3]
+ggsave("results/boxplot3.png", width = 6, height = 8, dpi = 300)
 ```
 
 
